# asmirnov_demo

./: CMakeLists.txt  person-detection-retail-0002.xml  src.cpp
